# survey-analytics

./: .gitignore
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: chat.py  compare.py  dashboard.py  export.py  insights.py  sessions.py  upload.py
backend/app/compare/: engine.py
backend/app/dashboard/: charts.py  generator.py
backend/app/data/: loader.py  profiler.py  quality.py
backend/app/db/: database.py  models.py
backend/app/insights/: generator.py
backend/app/llm/: agent.py  client.py  prompts.py
backend/app/opentext/: analyzer.py
backend/app/reports/: composer.py  renderer.py
backend/app/sandbox/: ast_check.py  runner.py
backend/app/tools/: registry.py
backend/tests/: conftest.py  test_agent.py  test_api_chat.py  test_api_sessions.py  test_api_upload.py  test_charts.py  test_compare.py  test_dashboard_generator.py  test_db.py  test_export.py  test_insights.py  test_llm_client.py  test_loader.py  test_opentext.py  test_profiler.py  test_quality.py  test_sandbox.py  test_static.py  test_tools.py
docs/: SYSTEM_OVERVIEW.md
docs/superpowers/plans/: 2026-06-17-plan-1-foundation.md  2026-06-17-plan-2-chat-agent.md  2026-06-17-plan-3-insights-compare-export.md  2026-06-17-plan-4-frontend.md
docs/superpowers/specs/: 2026-06-16-survey-analytics-design.md
frontend/: app.js  index.html  styles.css
