[project]
name = "survey-analytics"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "Pillow>=10.0",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "openai>=1.30",
    "rapidfuzz>=3.9",
    "python-multipart>=0.0.9",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
